# pyscaffoldext-custom-extension

./: .cirrus.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  README.rst  environment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-package.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
src/pyscaffoldext/custom_extension/: __init__.py  custom_extension.py  extension.py
src/pyscaffoldext/custom_extension/templates/: __init__.py  conftest.template  environment.template  extension.template  helpers.template  publish_package.template  readme.template  setup.py.template  test_custom_extension.template
src/pyscaffoldext/pyscaffoldext_custom_extension/: __init__.py
tests/: conftest.py  helpers.py  test_add_install_requires.py  test_custom_extension.py  test_entry_points.py  test_files.py  test_generated_extension.py  test_naming_convention.py  test_readme.py  test_set_default_command.py  test_set_namespace.py  travis_install.sh
